# street-addresses

./: .gitignore
road_segmentor/: CMakeLists.txt
road_segmentor/src/: CMakeLists.txt  main.cpp  segmentation_methods.cpp  thinning_methods.cpp
util/: utils.py
